--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "~3.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "highlight.js": "^9.8.0",
     "marked": "^0.3.6",
     "material-design-icons": "^3.0.1",
     "rxjs": "5.0.0-beta.12",
+    "showdown": "^1.5.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
