--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~2.0.0",
     "@angular/platform-browser-dynamic": "~2.0.0",
     "@angular/router": "~3.0.0",
+    "blueimp-md5": "^2.6.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "highlight.js": "^9.8.0",
